# Act-Leworldmodel

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
configs/: __init__.py  cache_latents.yaml  cache_pusht_latents.yaml  eval_closed_loop.yaml  eval_open_loop.yaml  eval_open_loop_h50.yaml  eval_pusht.yaml  train_gc_idm.yaml  train_gc_idm_h50.yaml  train_larc.yaml  train_larc_h50.yaml  train_world_model.yaml  train_world_model_h50.yaml
configs/controller/: cem.yaml  gc_idm.yaml  larc.yaml
configs/data/: cube.yaml  pusht.yaml  reacher.yaml  tworoom.yaml
configs/policy/: gc_idm.yaml  larc_chunk.yaml
configs/released_lewm/: pusht.yaml
configs/task/: pusht.yaml  tworoom.yaml
configs/world_model/: fast_lewm.yaml
controllers/: __init__.py  base.py
controllers/baselines/: __init__.py  cem.py
controllers/learned/: __init__.py  gc_idm.py  larc.py
data/: __init__.py  action_transform.py  dataset.py  evaluation.py  latent.py  latent_policy_dataset.py  pusht_eval.py  pusht_latent.py
docs/: checkpoint_format.md  controller_refactor_review.md  dynamics_backbone_review.md  experiment_outcome.md  horizon_stress_outcome.md  horizon_stress_progress.md  project_structure.md  pusht_horizon_stress_test.md  pusht_protocol.md  tworoom_horizon_stress_outcome.md  tworoom_horizon_stress_test.md  tworoom_progress.md
eval/: __init__.py  closed_loop.py  open_loop_curve.py  protocol.py  provenance.py  pusht_env.py  summarize.py  tworoom_env.py
losses/: __init__.py
losses/policies/: __init__.py  gc_idm_regression.py  larc_rollout_consistency.py
losses/world_model/: __init__.py  prefix_prediction.py
models/: __init__.py
models/policies/: __init__.py  common.py  gc_idm.py  larc_chunk.py
models/world_model/: __init__.py  artifacts.py  backbone.py  dynamics.py  frozen.py  interfaces.py  loading.py  one_step.py  parallel_predictor.py  prefix_encoder.py  projection.py  publication.py  released_lewm.py  vision.py
planning/: __init__.py
results/: RESULTS_pusht.md  RESULTS_pusht_horizon.md  RESULTS_tworoom_horizon.md
scripts/: horizon_full.sh  phase0_smoke.sh  phase1_ablation.sh  phase2_dynamics.sh  preflight.sh  publish_released_lewm.py  pusht_full.sh
tests/: test_action_protocol.py  test_cem.py  test_checkpoint_artifacts.py  test_closed_loop_policy.py  test_eval_protocol.py  test_eval_runtime.py  test_larc_objective.py  test_parameter_counts.py  test_pusht_latent_dataset.py  test_released_publication.py  test_runtime_independence.py  test_summarize.py  test_task_configs.py  test_tworoom_env.py  test_world_model.py
train/: __init__.py  artifacts.py  cache_latents.py  policy_common.py  reproducibility.py  train_gc_idm.py  train_larc.py  train_world_model.py
utils/: __init__.py  files.py
