[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "act-leworldmodel"
version = "0.1.0"
description = "Action-aware latent world models built on LeWorldModel"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "hydra-core>=1.3",
  "lightning>=2.5",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "stable-pretraining",
  "stable-worldmodel[env,train]",
  "torch>=2.5",
]

[project.scripts]
train-world-model = "train.train_world_model:main"
train-gc-idm = "train.train_gc_idm:main"
train-larc = "train.train_larc:main"

[tool.hatch.build.targets.wheel]
packages = ["configs", "controllers", "data", "losses", "models", "train"]

[tool.ruff]
line-length = 100
target-version = "py310"
