[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "act-leworldmodel"
version = "0.1.0"
description = "Action-aware latent world models built on LeWorldModel"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "h5py>=3.10",
  "hydra-core>=1.3",
  "lightning>=2.5",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "scikit-learn>=1.4",
  "stable-pretraining",
  "stable-worldmodel[env,train]",
  "torch>=2.5",
]

[project.scripts]
cache-pusht-latents = "train.cache_latents:main"
train-world-model = "train.train_world_model:main"
train-gc-idm = "train.train_gc_idm:main"
train-larc = "train.train_larc:main"
evaluate-pusht = "eval.closed_loop:main"
evaluate-open-loop = "eval.open_loop_curve:main"
summarize-pusht = "eval.summarize:main"

[project.optional-dependencies]
test = ["pytest>=8.0", "ruff>=0.15"]

[tool.hatch.build.targets.wheel]
packages = ["configs", "controllers", "data", "eval", "losses", "models", "train"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["third_party"]
