[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "act-leworldmodel"
version = "0.1.0"
description = "Action-aware latent world models built on LeWorldModel"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
dependencies = [
  "gymnasium==1.3.0",
  "h5py==3.16.0",
  "hdf5plugin==7.0.0",
  "hydra-core==1.3.4",
  "imageio==2.37.3",
  "imageio-ffmpeg==0.6.0",
  "lightning==2.6.5",
  "matplotlib==3.10.9",
  "numpy==2.2.6",
  "omegaconf==2.3.1",
  "opencv-python==5.0.0.93",
  "pygame==2.6.1",
  "pymunk==7.3.0",
  "torch==2.13.0",
  "transformers==4.57.6",
]

[project.scripts]
cache-pusht-latents = "train.cache_latents:main"
train-world-model = "train.train_world_model:main"
train-gc-idm = "train.train_gc_idm:main"
train-larc = "train.train_larc:main"
evaluate-pusht = "eval.closed_loop:main"
evaluate-open-loop = "eval.open_loop_curve:main"
summarize-pusht = "eval.summarize:main"

[project.optional-dependencies]
test = ["pytest==9.0.2", "ruff==0.15.6"]

[tool.uv]
required-version = "==0.11.28"

[tool.hatch.build.targets.wheel]
packages = ["configs", "controllers", "data", "eval", "losses", "models", "train", "utils"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["third_party"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
